<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="-40dp"
        android:src="@drawable/ic_account"
        android:contentDescription="User image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="3dp"
        android:text="@string/SignIn"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_signin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_signin_signin"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/button_bg"
        android:onClick="onClickManager"
        android:text="@string/SignIn"
        android:textColor="@drawable/button_fg"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoAccount"/>

        <Button
            android:id="@+id/btn_signin_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:onClick="onClickManager"
            android:text="@string/click_here"
            android:textAllCaps="false"
            android:textColor="@drawable/link_fg"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="." />

    </LinearLayout>

</LinearLayout>
